--- a/scrapy.cfg
+++ b/scrapy.cfg
@@ -4,8 +4,8 @@
 # https://scrapyd.readthedocs.org/en/latest/deploy.html
 
 [settings]
-default = jobs_overview.settings
+default = JobsOverviewCrawler.settings
 
 [deploy]
 #url = http://localhost:6800/
-project = jobs_overview
+project = JobsOverviewCrawler
